# logic-min

./: Cargo.toml
fixtures/fixture-details/: Cargo.toml
fixtures/fixture-details/src/: all.rs  details.rs  lib.rs  value_generator.rs
fixtures/fixture-manager/: Cargo.toml
fixtures/fixture-manager/src/: command.rs  lib.rs  main.rs
logic-min/: Cargo.toml
logic-min/proptest-regressions/cover/: tautology.txt
logic-min/src/: cube.rs  lib.rs  proptest_helpers.rs
logic-min/src/cover/: caches.rs  cover_impl.rs  display.rs  mod.rs  tautology.rs
src/: cover.rs  cube.rs  errors.rs  lib.rs  logic_function.rs  primes.rs
src/cover/: cover_impl.rs  mod.rs  primes.rs
