[package]
name = "logic-min"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = "0.7.2"
bitvec = "1.0.0"
itertools = "0.10.3"
once_cell = "1.8.0"
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"

[features]
proptest1 = ["proptest"]
